# Lung-Cancer-Detector

./: .gitignore  .replit  Readme.md  app.py  image_enhancement.py  model.py  preprocessing.py  pyproject.toml  replit.md  requirements.txt  sample_data.py  secrets_sample.toml  train_model.py  utils.py  visualization.py
.streamlit/: secrets.toml  secrets.toml.template
attached_assets/: app_1753523067544.py
repl_nix_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
